# aws-infra-template

./: .checkov.yaml  .editorconfig  .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  .pymarkdown  .tflint.hcl  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/scripts/: aws-sso-credentials.sh
.claude/skills/aws/: README.md  SKILL.md
.claude/skills/aws/scripts/: check-aws-auth.sh  setup-aws-auth.sh
.claude/skills/bump-tool-versions/: SKILL.md
.claude/skills/export-claude-to-copilot/: SKILL.md
.claude/skills/pr-description/: SKILL.md
.claude/skills/shell/: SKILL.md
.claude/skills/terraform/: SKILL.md
.cspell/: project-words.txt
.github/: actionlint.yaml  copilot-instructions.md  dependabot.yml  renovate.json
.github/workflows/: conventional-commits.yml  lint.yml
docs/: ai-instructions.md
scripts/: terraform-validate-module.sh
src/terraform/: .terraform.lock.hcl  backend.tf  locals.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
src/terraform/bootstrap/: .terraform.lock.hcl  README.md  bootstrap-state-bucket.tf  locals.tf  main.tf  outputs.tf  state.tf  terraform.tfvars.example  variables.tf
src/terraform/modules/networking/: main.tf  outputs.tf  variables.tf
src/terraform/modules/storage/: main.tf  outputs.tf  variables.tf
