# aws-infra-template's Python configuration.
# This file exists only to declare dev dependencies; the project itself
# is primarily Terraform, not a Python package.

# cspell:words testpaths

[project]
name = "aws-infra-template"
version = "0.1.0"
description = "Polyglot project template with Terraform in src/terraform"
requires-python = ">=3.14"
dependencies = [
  # No runtime dependencies, but dev dependencies are declared below.
]

[tool.uv]
# This project has no installable Python package — uv should only manage
# the dev dependencies declared below.
package = false

[dependency-groups]
lint = ["pre-commit"]
test = [
  # Test dependencies would go here, e.g. "pytest" or "mypy".
]
dev = [{ include-group = "lint" }, { include-group = "test" }]
